# copier-pipeline

./: .all-contributorsrc  .codecov.yml  .copier-answers.yml  .coveragerc  .env  .flake8  .gitattributes  .gitignore  .gitignore.jinja  .gitmodules  .isort.cfg  .markdownlint-cli2.yaml  .markdownlint.yaml  .nest_md_top  .nest_tools_config_top  .pre-commit-config.yaml  .prettierignore  .renovaterc.json  .root  .sourcery.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dev.ps1  Dockerfile  Invoke-Uv.ps1  LICENSE  Makefile  README.md  README.md.jinja  README.md.tmpl  bump.py  codecov.yml  copier-6.0.0a7-py3-none-any.whl  copier.yml  dev.ps1  first_time_setup.ps1  lock-high.json  (+10 more)
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  SECURITY.md  dependabot.yml  dependabot.yml.tmpl  funding.yml  issue_template.md  pull_request_template.md
.github.tmpl/workflows/: codeql-analysis.yml
.github/DISCUSSION_TEMPLATE/: general.yaml  ideas-for-docs.yaml  ideas-for-infrastructure.yaml  ideas.yaml  internal.yaml  q-a.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yml  feature-request.yaml  ideas-for-docs.yaml  infrastructure-change.yaml  internal.yaml
.github/workflows/: bump.yml  bump_precommit.yml  bump_workflows.yml  changerelease.yml  check_installable.yml  ci.yml  codeql-analysis.yml  codeql-analysis.yml.tmpl  codeql.yml  contrib.yml  docs.yml  high.yml  lock.yml  main.yml  publish.yml  release.yml  renovate_automerge.yml  sphinx.yml
.tools/: pyproject.toml
.tools/requirements/: requirements.txt  requirements_both.txt  requirements_ci.txt  requirements_core.txt  requirements_dev.txt  requirements_docs.txt  requirements_nodeps.txt  requirements_project.txt
.tools/scripts/: Copy-Template.ps1  Invoke-Pyright.ps1  Update-Template.ps1  bump_requirements.py  compose_pyproject.py  core_update.py  first_time_setup.ps1  pythonstartup.py  template_common.ps1  warning_filters.py
bump/: .pre-commit-config.yaml  precommit.py  workflows.py
bump/workflows/: bump.yml  bump_template.yml  changerelease.yml  codeql-analysis.yml  main.yml  publish.yml  sphinx.yml
changelog/: +2024-07-05T18-07-25.5591599Z.change.md  +2024-07-08T18-46-32.0253400Z.change.md  +2024-07-09T17-32-53.7369239Z.change.md  +2024-07-09T21-39-30.7274706Z.change.md  +2024-07-10T20-15-12.3792313Z.change.md  +2024-07-23T22-57-37.1533816Z.change.md  +2024-07-23T23-00-56.6485880Z.change.md  +2024-07-25T16-47-10.5848837Z.change.md  +2024-09-23T21-39-07.0266718Z.change.md  +423.1.change.md  397.change.md  406.change.md  413.change.md  414.change.md  415.change.md  416.change.md  417.change.md  421.change.md  423.change.md  432.change.md  437.change.md  towncrier_template.md.jinja
dependabot/: bump.py
docs/: conf.py  contributing.md  index.md  pyproject.toml  references.md  troubleshooting.md
docs/_static/: local.css
docs/copier_python_docs/: __main__.py  docstrings.py  intersphinx.py
docs/examples/: example.ipynb
requirements/: dev.in  requirements.txt  requirements_dev.txt  sync.in  uv.in
scripts/: Common.ps1  Common.psm1  Copy-Template.ps1  Initialize-LinuxMacOS.sh  Initialize-Machine.ps1  Initialize-Repo.ps1  Initialize-Shell.ps1  Initialize-Windows.ps1  Sync-Env.ps1  Sync-Py.ps1  Sync-Template.ps1  install.py  pyproject.toml
scripts/copier_python_tools/: __main__.py  add_changes.py  environment.py  sync.py  types.py
src/copier_pipeline/: __init__.py
src/copier_python/: __init__.py
src/dummy/: __init__.py
template/: .all-contributorsrc.jinja  .coveragerc.jinja  .env  .flake8  .gitattributes  .gitignore  .gitignore.jinja  .gitmodules  .markdownlint-cli2.yaml  .nest_markdown  .nest_tooling  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  .prettierignore  .renovaterc.json  .renovaterc.json.jinja  .sourcery.yaml.jinja  .taplo.toml  .tooling  CHANGELOG.md  CHANGELOG.md.jinja  CODE_OF_CONDUCT.md.jinja  CONTRIBUTING.md.jinja  Dev.ps1.jinja  Invoke-Uv.ps1  LICENSE.jinja  README.md.jinja  dev.ps1.jinja  package.json  package.json.jinja  pyproject.toml.jinja  pyrightconfig.json  pytest.ini  pytest.ini.jinja  pythonrc.py  renovate.json  renovate.json.jinja  requirements.txt  requirements_both.txt  requirements_cicd.txt  (+17 more)
template/.devcontainer/: devcontainer.json  devcontainer.json.jinja
template/.github/: CODE_OF_CONDUCT.md.jinja  SECURITY.md.jinja  dependabot.yml  dependabot.yml.jinja  issue_template.md.jinja  pull_request_template.md.jinja  {% if include_funding %}funding.yml.jinja{% endif %}
template/.tooling/: .gitignore.jinja  cicd_setup.sh.jinja  setup.ps1.jinja  update.ps1.jinja
template/.tools/: .gitignore.jinja  cicd_setup.sh.jinja  pyproject.toml  pyproject.toml.jinja
template/.vscode.jinja/: extensions.json  settings.json
template/changelog/: towncrier_template.md.jinja.jinja
template/docs/: .gitignore  changelog.md  conf.py  conf.py.jinja  contributing.md.jinja  contributors.md  index.md  index.md.jinja  pyproject.toml.jinja  refs-template.bib  requirements.txt
template/requirements/: dev.in  install.txt  sync.in  uv.in  uv.txt
template/scripts/: Common.ps1  Copy-Template.ps1  CrossPy.psm1  Initialize-LinuxMacOS.sh  Initialize-LinuxMacOS.sh.jinja  Initialize-Machine.ps1  Initialize-Machine.ps1.jinja  Initialize-Repo.ps1  Initialize-Repo.ps1.jinja  Initialize-Shell.ps1  Initialize-Shell.ps1.jinja  Initialize-Windows.ps1  Initialize-Windows.ps1.jinja  Set-StrictErrors.ps1  Sync-Py.ps1.jinja  Sync-Template.ps1  install.py  pyproject.toml.jinja
template/tests/: conftest.py  pyproject.toml.jinja  test_{{ project_name }}.py.jinja
template/tooling/: .gitignore.jinja  bump_pyproject.py  cicd_setup.sh.jinja  pythonrc.py  requirements_both.txt  requirements_dev.txt  setup.ps1.jinja  setup_cicd.py  setup_cicd.sh.jinja  update.ps1.jinja
template/{% if use_dvc %}data{% endif %}/: .gitignore.jinja
template/{% if use_dvc %}data{% endif %}.jinja/: .gitignore.jinja
template_workflows/: publish.yml
tests/: pyproject.toml  test_copier_pipeline.py  test_dummy.py
tests/copier_python_tests/: test_copier_python.py
(+106 files in other folders)
