[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "copier_python_docs"
version = "0.0.0"
description = "Docs."
dependencies = [
    # ? Core docs
    "docutils==0.20.1",
    "linkify-it-py==2.0.3",
    "myst-nb==1.0.0",
    "myst-parser==2.0.0",
    "numpydoc==1.7.0",
    "ruamel-yaml==0.18.6",
    "sphinx-autobuild==2024.2.4",
    "sphinx-autodoc2==0.5.0",
    "sphinx-book-theme==1.1.2",
    "sphinx-design==0.5.0",
    "sphinx-thebe==0.3.1",
    "sphinx-tippy==0.4.2",
    "sphinx-togglebutton==0.3.2",
    "sphinx==7.2.6",
    "sphinxcontrib-bibtex==2.6.2",
    "sphinxcontrib-mermaid==0.9.2",
    "sphinxcontrib-towncrier==0.4.0a0",
]

[tool.fawltydeps]
deps = ["docs/pyproject.toml"]
code = ["docs"]
ignore_undeclared = [
    "copier_python_docs",
    "copier_python_tests",
    "copier_python_tools",
    "copier_python",
]
ignore_unused = [
    # ? Core docs tools or declared as extensions in `conf.py`
    "linkify-it-py",
    "myst-nb",
    "myst-parser",
    "sphinx-autobuild",
    "sphinx-autodoc2",
    "sphinx-book-theme",
    "sphinx-design",
    "sphinx-thebe",
    "sphinx-tippy",
    "sphinx-togglebutton",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-mermaid",
    "sphinxcontrib-towncrier",
]
[tool.fawltydeps.custom_mapping]
ruamel-yaml = ["ruamel"]
