[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "copier_python_tools"
version = "0.0.0"
description = "Tools."
dependencies = ["cyclopts==2.5.0", "pipx==1.5.0", "ruamel-yaml==0.18.6"]
[project.scripts]
"copier_python_tools" = "copier_python_tools.__main__:main"

[tool.fawltydeps]
deps = ["scripts/pyproject.toml"]
code = ["scripts/copier_python_tools"]
ignore_undeclared = [
    "copier_python_docs",
    "copier_python_tests",
    "copier_python_tools",
    "copier_python",
]
ignore_unused = [
    "pipx", # For `pipx run` of scripts with dependencies isolated by PEP 723
]
[tool.fawltydeps.custom_mapping]
ruamel-yaml = ["ruamel"]
