[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "copier_python_tools"
version = "0.0.0"
description = "Tools."
dependencies = [
    # ? Core script tools
    "copier==9.2.0",
    "cyclopts==2.7.0",
    "dulwich==0.22.1",
    "ipython==8.25.0",
    "pipx==1.6.0",
]
[project.scripts]
"copier_python_tools" = "copier_python_tools.__main__:main"

[tool.fawltydeps]
deps = ["scripts/pyproject.toml"]
code = ["scripts/copier_python_tools"]
ignore_undeclared = [
    "copier_python_docs",
    "copier_python_tests",
    "copier_python_tools",
    "copier_python",
]
ignore_unused = [
    # ? Core script tools
    "copier", # For template sync
    "pipx",   # For `pipx run` of scripts with dependencies isolated by PEP 723
    # ? Other deps
    "ipython", # Used for local experimentation
]
