[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "copier_python_tools"
version = "0.0.0"
description = "Tools."
dependencies = [
  # ? Core script tools
  "cyclopts==2.9.3",
  "dulwich==0.22.1",
  "ipython==8.26.0",
  "pipx==1.6.0",
  "pydantic-settings>=2.5.2",
  "python-dotenv==1.0.1",
  "toml==0.10.2 ; python_version < '3.11'",
]
[project.scripts]
"copier-python-tools" = "copier-python_tools.__main__:main"
"copier_python_tools" = "copier_python_tools.__main__:main"

[tool.fawltydeps]
deps = ["scripts/pyproject.toml"]
code = ["scripts/copier_python_tools"]
ignore_undeclared = [
  "copier_python_docs",
  "copier_python_tests",
  "copier_python_tools",
  "copier_python",
]
ignore_unused = [
  # ? Core script tools
  "copier", # For template sync
  "pipx",   # For `pipx run` of scripts with dependencies isolated by PEP 723
  # ? Other deps
  "ipython", # Used for local experimentation
]
